# dcap-attestation-verify-poc

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
generation/: Cargo.toml
generation/src/: main.rs  quote_generator.rs
sample/: quote  quote_collateral
sample.bak/: quote
sample.bak/quote_collateral/: pck_crl  qe_identity  root_ca_crl
sample/quote_collateral/: tcb_info
sample/quote_collateral_artifacts/: pck_crl  qe_identity  tcb_info
src/: error.rs  main.rs  utils.rs
src/qe_identity/: mod.rs
src/quote/: mod.rs
src/quote_collateral/: mod.rs
src/tcb/: mod.rs
