[package]
name = "dcap-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }

scale-codec = { version = "3.6.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
ring = { version = "0.17.5", default-features = false, features = ["alloc"] }
webpki = { package = "rustls-webpki", git = "https://github.com/rustls/webpki.git", default-features = false, features = ["alloc", "ring"] }
const-oid = { version = "0.9.5", default-features = false }
der = { version = "0.7.8", default-features = false }
x509-cert = { version = "0.2.4", default-features = false }

log = { version = "0.4.20", default-features = false }
anyhow = "1.0.75"
thiserror = "1.0.50"
base64 = "0.21.4"

# [patch.crates-io]
# ring = { git = "https://github.com/jasl/ring-xous.git", branch = "better-wasm32-support" }
