[package]
name = "dcap-generation-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-tee-quote-verification-rs = { path = "./vendor/sgx-dcap-quoteverify-rs" } # { path = "../vendor/sgx-dcap-quoteverify-rs" }
intel-tee-quote-verification-sys = { path = "./vendor/sgx-dcap-quoteverify-sys" }
scale-codec = { version = "3.6.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
log = { version = "0.4.20", default-features = false }
anyhow = "1.0"

[features]
TD_ENV = []
